--- a/index.html
+++ b/index.html
@@ -15,31 +15,31 @@
             <h2 class="title">Quản lý nhân viên</h2>
             <form>
                 <div class="mb-3">
-                    <label>Mã nhân viên</label>
+                    <label>Mã nhân viên</label> <label class="text-danger" id="inpIdError"></label>
                     <input id="inpId" type="number" class="form-control" min="1" max="999999">
                 </div>
                 <div class="mb-3">
-                    <label>Tên nhân viên</label>
+                    <label>Tên nhân viên</label> <label class="text-danger" id="inpNameError"></label>
                     <input id="inpName" type="text" class="form-control">
                 </div>
                 <div class="mb-3">
                     <label>Chức vụ</label>
                     <select id="selPosition" class="form-control">
-                        <option value="1">Nhân viên</option>
-                        <option value="2">Quản lý</option>
-                        <option value="3">Giám đốc</option>
+                        <option value="Nhân viên">Nhân viên</option>
+                        <option value="Quản lý">Quản lý</option>
+                        <option value="Giám đốc">Giám đốc</option>
                     </select>
                 </div>
                 <div class="mb-3">
-                    <label>Lương cơ bản</label>
-                    <input id="inpSalary" type="number" class="form-control" min="1000000" max="20000">
+                    <label>Lương cơ bản</label> <label class="text-danger" id="inpSalaryError"></label>
+                    <input id="inpSalary" type="number" class="form-control" min="1000000" max="20000000">
                 </div>
                 <div class="mb-3">
-                    <label>Số giờ làm trong tháng</label>
+                    <label>Số giờ làm trong tháng</label> <label class="text-danger" id="inpHoursError"></label>
                     <input id="inpHours" type="number" class="form-control" min="50" max="150">
                 </div>
                 <button class="btn btn-success" id="btnAdd">Thêm nhân viên</button>
-                <button class="btn btn-primary" id="btnEdit">Chỉnh sửa</button>
+                <button class="btn btn-primary" id="btnUpdate">Chỉnh sửa</button>
             </form>
         </div>
 
@@ -54,9 +54,10 @@
                         <th>Tổng lương</th>
                         <th>Giờ làm/tháng</th>
                         <th>Xếp loại nhân viên</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
-                <tbody id="tb-manage">
+                <tbody id="tbManage">
                     
                 </tbody>
             </table>
@@ -68,6 +69,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     
+    <script src="./js/model/employee.js"></script>
     <script src="./js/script.js"></script>
 </body>
 </html>
